--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <img src="Vespula_germanica_Richard_Bartz.jpg" alt="Wasp Picture" />
 </head>
 <header>
-    Owasp's Top Ten
+    OWASP's Top Ten
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="ow_top_ten.html">Top Ten</a></li>
+            <li><a href="ow_contact_us.html">Contact Us</a></li>
+        </ul>
+    </nav>
 </header>
-
 <body>
 </body>
 
