Updated CSS File
Updated css file and added images. Still need to fix size tho.

--- a/ow_top_ten.html
+++ b/ow_top_ten.html
@@ -1,9 +1,36 @@
 <!Doctype html>
 <html>
-    <head>
-
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <title>Owasp's Top Ten</title>
+    <link rel="stylesheet" href="ow_styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Notable" rel="stylesheet" />
+    <link rel="stylesheet" href="ow_contact_us.html" />
+    <link rel="stylesheet" href="ow_layout.css" />
+    <link rel="stylesheet" href="ow_top_ten.html" />
+</head>
+<header>
+    OWASP's Top Ten
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="ow_top_ten.html">Top Ten</a></li>
+            <li><a href="ow_contact_us.html">Contact Us</a></li>
+        </ul>
+    </nav>
+</header>
+<body>  
+    <ol>
+        <li>Injection</li>
+        <li>Broken Authentication</li>
+        <li>Sensitive Data Exposure</li>
+        <li>XML External Entities (XXE)</li>
+        <li>Broken Access Control</li>
+        <li>Security Misconfiguration</li>
+        <li>Cross-Site Scripting (XSS)</li>
+        <li>Insecure Deserialization</li>
+        <li>Using Components with Known Vulnerabilities</li>
+        <li>Insufficient Logging&Monitoring</li>
+    </ol>
+</body>
 </html>
