--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <title>Owasp's Top Ten</title>
     <link rel="stylesheet" href="ow_styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Notable" rel="stylesheet" />
     <link rel="stylesheet" href="ow_contact_us.html" />
     <link rel="stylesheet" href="ow_layout.css" />
     <link rel="stylesheet" href="ow_top_ten.html" />
-    <img src="Vespula_germanica_Richard_Bartz.jpg" alt="Wasp Picture" />
+    <img src="Vespula_germanica_Richard_Bartz(1).jpg" alt="Wasp Picture" class="center" />
 </head>
 <header>
     OWASP's Top Ten
