Color Change (Im Sorry)
I couldn't find the right color and i was trying to set up the column separations but it wasn't working.

--- a/ow_top_ten.html
+++ b/ow_top_ten.html
@@ -1,5 +1,6 @@
 <!Doctype html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Owasp's Top Ten</title>
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="ow_layout.css" />
     <link rel="stylesheet" href="ow_top_ten.html" />
 </head>
+
 <header>
     OWASP's Top Ten
     <nav>
@@ -19,18 +21,30 @@
         </ul>
     </nav>
 </header>
+
 <body>  
     <ol>
         <li>Injection</li>
+        <p>Information About Injections</p>
         <li>Broken Authentication</li>
+        <p>Information About Broken Authentication</p>
         <li>Sensitive Data Exposure</li>
+        <p>Information About Sensitive Data Exposure</p>
         <li>XML External Entities (XXE)</li>
+        <p>Information About XML External Entities</p>
         <li>Broken Access Control</li>
+        <p>Information About Broken Access Control</p>
         <li>Security Misconfiguration</li>
+        <p>Information About Security Misconfiguration</p>
         <li>Cross-Site Scripting (XSS)</li>
+        <p>Information About Cross-Site Scripting</p>
         <li>Insecure Deserialization</li>
+        <p>Information About Insecure Deserialization</p>
         <li>Using Components with Known Vulnerabilities</li>
-        <li>Insufficient Logging&Monitoring</li>
+        <p>Information About Using Components with Known Vulnerabilities</p>
+        <li>Insufficient Logging & Monitoring</li>
+        <p>Information About Insufficient Logging and Monitoring</p>
     </ol>
 </body>
+
 </html>
