--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="ow_top_ten.html">Contact Us</a></li>
-            <li><a href="ow_contact_us.html">Top Ten</a></li>
+            <li><a href="ow_contact_us.html">Contact Us</a></li>
+            <li><a href="ow_top_ten.html">Top Ten</a></li>
         </ul>
     </nav>
 </header>
 <section #leftcol>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut placerat orci nulla pellentesque dignissim enim sit amet. At ultrices mi tempus imperdiet nulla malesuada. </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut placerat orci nulla pellentesque dignissim enim sit amet. At ultrices mi tempus imperdiet
+        nulla malesuada. </p>
 </section>
 <section #rightcol>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut placerat orci nulla pellentesque dignissim enim sit amet. At ultrices mi tempus imperdiet nulla malesuada.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut placerat orci nulla pellentesque dignissim enim sit amet. At ultrices mi tempus imperdiet
+        nulla malesuada.</p>
 </section>
+
 <body>
 </body>
 
