--- a/ow_top_ten.html
+++ b/ow_top_ten.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -22,28 +22,84 @@
     </nav>
 </header>
 
-<body>  
+<body>
     <ol>
-        <li>Injection</li>
-        <p>Information About Injections</p>
-        <li>Broken Authentication</li>
-        <p>Information About Broken Authentication</p>
-        <li>Sensitive Data Exposure</li>
-        <p>Information About Sensitive Data Exposure</p>
-        <li>XML External Entities (XXE)</li>
-        <p>Information About XML External Entities</p>
-        <li>Broken Access Control</li>
-        <p>Information About Broken Access Control</p>
-        <li>Security Misconfiguration</li>
-        <p>Information About Security Misconfiguration</p>
-        <li>Cross-Site Scripting (XSS)</li>
-        <p>Information About Cross-Site Scripting</p>
-        <li>Insecure Deserialization</li>
-        <p>Information About Insecure Deserialization</p>
-        <li>Using Components with Known Vulnerabilities</li>
-        <p>Information About Using Components with Known Vulnerabilities</p>
-        <li>Insufficient Logging & Monitoring</li>
-        <p>Information About Insufficient Logging and Monitoring</p>
+        <h2>
+            <li>Injection</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>Broken Authentication</li>
+        </h2>
+        <p>Broken Authentication </p>
+        <h2>
+            <li>Sensitive Data Exposure</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>XML External Entities (XXE)</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>Broken Access Control</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>Security Misconfiguration</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>Cross-Site Scripting (XSS)</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>Insecure Deserialization</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>Using Components with Known Vulnerabilities</li>
+        </h2>
+        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
+        <h2>
+            <li>Insufficient Logging & Monitoring</li>
+        </h2>
+        <p>IInjections are when untrusted data is tranfered to a code interpreter and placed in a web application.
+            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
+            application and records sensitive data and records. Some ways to prevent Injections are to keep data
+            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
+            loss, corruption, & disclusure to unauthorized parties.</p>
     </ol>
 </body>
 
