--- a/ow_top_ten.html
+++ b/ow_top_ten.html
@@ -36,7 +36,7 @@
         <h2>
             <li>Broken Authentication</li>
         </h2>
-        <p>Broken Authentication </p>
+        <p>Broken Authentication can give attackers the ability to control and compromise an entire system with an admin account. </p>
         <h2>
             <li>Sensitive Data Exposure</li>
         </h2>
