--- a/ow_top_ten.html
+++ b/ow_top_ten.html
@@ -36,7 +36,11 @@
         <h2>
             <li>Broken Authentication</li>
         </h2>
-        <p>Broken Authentication can give attackers the ability to control and compromise an entire system with an admin account. </p>
+        <p>Broken Authentication can give attackers the ability to control and compromise an entire system with an
+            admin account. Attackers can also access valid usernames and passwords. Broken Authentication occurs when
+            a website allows weak credentials and passwords. Some ways to prevent broken authentication are to
+            impliment multi-facotr authentication to prevent attacks, and to limit password failures and incorrect
+            login attempts. </p>
         <h2>
             <li>Sensitive Data Exposure</li>
         </h2>
