--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         </ul>
     </nav>
 </header>
-<section #leftcol>
+<article>
+    <h1>What is OWASPS Top Ten?</h1>
+    <p>
+        OWASPS Top Ten is a awareness document for web application security. It contains a list of problem that one may not realise are endangering their application or website, along with a list of how to fix these problems.
+    </p>
+</article>
+
+<!-- <section #leftcol>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut placerat orci nulla pellentesque dignissim enim sit amet. At ultrices mi tempus imperdiet
         nulla malesuada. </p>
@@ -30,7 +37,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut placerat orci nulla pellentesque dignissim enim sit amet. At ultrices mi tempus imperdiet
         nulla malesuada.</p>
-</section>
+</section> -->
 
 <body>
 </body>
