--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <article>
     <h1>What is OWASPS Top Ten?</h1>
     <p>
-        OWASPS Top Ten is a awareness document for web application security. It contains a list of problem that one may not realise are endangering their application or website, along with a list of how to fix these problems. However, these are not the only security risks out there that come along with web application, there are hundreds, thousands of risks that come with it. These are just the Top Ten most critical ranked by OWASP. They are also not going to always be the top 10, the list is ever evolving and OWASP, or The Open Web Application Security Project, updates the top 10 every few years. The 10 Security Risks, for the year 2017, in descending order are Injections, Broken Authentication, Misconfiguration, Cross-Site Scripting, Insecure Deserialization, Using Components with Known Vulnerabilities, and Insufficient Logging and Monitoring. All 10 of these risks carry devastating effects that can, quite literally, bring an individual and/or their business to ruin. Some of the aforementioned effects that can occur are data loss, corruption, identity theft, deletion of records, and the list goes on. It is important for an individual who is employed in the field of website application to be aware of these risks and the consequences that can happen when one is oblivious to them. 
+        OWASP'S Top Ten is a awareness document for web application security. It contains a list of problem that one
+        may not realise are endangering their application or website, along with a list of how to fix these problems.
     </p>
 </article>
 
