--- a/ow_top_ten.html
+++ b/ow_top_ten.html
@@ -39,24 +39,20 @@
         <p>Broken Authentication can give attackers the ability to control and compromise an entire system with an
             admin account. Attackers can also access valid usernames and passwords. Broken Authentication occurs when
             a website allows weak credentials and passwords. Some ways to prevent broken authentication are to
-            impliment multi-facotr authentication to prevent attacks, and to limit password failures and incorrect
-            login attempts. </p>
+            impliment multi-factor authentication to prevent attacks, and to limit password failures and incorrect
+            login attempts. Some of the after effects that can hapen because of broken authentication are money
+            laundering, social security fraud, & identity theft.</p>
         <h2>
             <li>Sensitive Data Exposure</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Sensitive Data Exposure is when websites don't protect sensitive information which can be used for nefarious
+            purposes. When SDE happens, or Sensitive Data Exposure, data transmitted in clear text can cause danggerous
+            internet traffic, both internal and external. Sensitive Data Exposure can happen when the user agent (for
+            example, email, apps, etc.) doesn't verify if the server certificate is valid.</p>
         <h2>
             <li>XML External Entities (XXE)</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>XML External Entities, or XXE, attack against web apps that analyze (XML) input. </p>
         <h2>
             <li>Broken Access Control</li>
         </h2>
