Added text to each of the sections.
Added final comments to each of the htmls and the style sheet.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- This set of code sets the title of the website, it provides links to the style sheets and all the html links -->
     <meta charset="utf-8" />
     <title>Owasp's Top Ten</title>
     <link rel="stylesheet" href="ow_styles.css" />
@@ -9,24 +10,31 @@
     <link rel="stylesheet" href="ow_contact_us.html" />
     <link rel="stylesheet" href="ow_layout.css" />
     <link rel="stylesheet" href="ow_top_ten.html" />
+    <!-- This set of code inserts an image to the webite. -->
     <img src="Vespula_germanica_Richard_Bartz(1).jpg" alt="Wasp Picture" class="center" />
 </head>
 <header>
+    <!-- This set of code sets the the header to whatever text you put in. -->
     OWASP's Top Ten
     <nav>
         <ul>
+            <!-- This sets hypertext links on the rendered page, so when you click on it it will take you to that specific location. -->
             <li><a href="index.html">Home</a></li>
             <li><a href="ow_top_ten.html">Top Ten</a></li>
         </ul>
     </nav>
 </header>
 <article>
+    <!-- This sets a heading smaller than the actual header element.  -->
     <h1>What is OWASPS Top Ten?</h1>
+    <!-- This puts in whatever text you insert into a paragraph in the article section of the rendered page. -->
     <p>
         OWASPS Top Ten is a awareness document for web application security. It contains a list of problem that one may not realise are endangering their application or website, along with a list of how to fix these problems. However, these are not the only security risks out there that come along with web application, there are hundreds, thousands of risks that come with it. These are just the Top Ten most critical ranked by OWASP. They are also not going to always be the top 10, the list is ever evolving and OWASP, or The Open Web Application Security Project, updates the top 10 every few years. The 10 Security Risks, for the year 2017, in descending order are Injections, Broken Authentication, Misconfiguration, Cross-Site Scripting, Insecure Deserialization, Using Components with Known Vulnerabilities, and Insufficient Logging and Monitoring. All 10 of these risks carry devastating effects that can, quite literally, bring an individual and/or their business to ruin. Some of the aforementioned effects that can occur are data loss, corruption, identity theft, deletion of records, and the list goes on. It is important for an individual who is employed in the field of website application to be aware of these risks and the consequences that can happen when one is oblivious to them. 
-    </p>
+    </p> 
+    <!-- This sets another heading. -->
     <h1>Contact Information</h1>
     <p>
+        <!-- This sets whatever text you put in as an email link in order to contact the person. -->
         <a href="mailto:mbaker880@west-mec.org">Mackenzie Baker</a> 
         <br>
         <a href="mailto:aarias011@west-mec.org">Anthony Arias</a>
@@ -38,6 +46,7 @@
 </article>
 
 <body>
+    
 </body>
 
 </html>
