--- a/ow_top_ten.html
+++ b/ow_top_ten.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- Below, we have inserted all of the head information which isn't actually present on the web page itself. Things such as links to fonts, stylesheets, and other pages. The web page title is also present. -->
 <head>
     <meta charset="utf-8" />
     <title>Owasp's Top Ten</title>
@@ -10,18 +10,17 @@
     <link rel="stylesheet" href="ow_layout.css" />
     <link rel="stylesheet" href="ow_top_ten.html" />
 </head>
-
+<!-- In the header below, we have inserted links to the home page and the top 10 page which contains all of the information on the 10 seperate risks from OWASP. -->
 <header>
     OWASP's Top Ten
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="ow_top_ten.html">Top Ten</a></li>
-
         </ul>
     </nav>
 </header>
-
+<!-- In the body underneath, we have listed off all of the ten risks listed by OWASP for web application in the year 2017. We have listed them with h2 tags so as to make them pop out more than the standard p text. The risks' effects and ways to prevent them are also listed along with the risks themselves. -->
 <body>
     <ol>
         <h2>
@@ -38,73 +37,89 @@
         <p>Broken Authentication can give attackers the ability to control and compromise an entire system with an
             admin account. Attackers can also access valid usernames and passwords. Broken Authentication occurs when
             a website allows weak credentials and passwords. Some ways to prevent broken authentication are to
-            impliment multi-facotr authentication to prevent attacks, and to limit password failures and incorrect
-            login attempts. </p>
+            impliment multi-factor authentication to prevent attacks, and to limit password failures and incorrect
+            login attempts. Some of the after effects that can hapen because of broken authentication are money
+            laundering, social security fraud, & identity theft.</p>
         <h2>
             <li>Sensitive Data Exposure</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Sensitive Data Exposure is when websites don't protect sensitive information which can be used for nefarious
+            purposes. When SDE happens, or Sensitive Data Exposure, data transmitted in clear text can cause danggerous
+            internet traffic, both internal and external. Sensitive Data Exposure can happen when the user agent (for
+            example, email, apps, etc.) doesn't verify if the server certificate is valid.</p>
         <h2>
             <li>XML External Entities (XXE)</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>XML External Entities, or XXE, attack against web apps that analyze (XML) input. The attacks happen when the
+            web apps accept XML uploads from untrusted sources. One way that the programs can become susceptible to XXE
+            attacks is if it uses SOAP prior to the specific version. Some ways to prevent these attacks are for the
+            web app to use less complex formats and to avoid serialization of sensitive data. A second prevention act
+            is to Patch and upgrade XML processors and libraries used by the application or underlying operating
+            system.</p>
         <h2>
             <li>Broken Access Control</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Broken Access Control refers to a system that controls access to information or functionality. The ways that
+            BAC can occur is by bypassing the access control checks by modifying the URL, internal app, state, or the
+            HTML page. They can also use metadate manipluations, relaying and tampering with a JSON web token, access
+            control token, or a cookie used to manipulate priviledges. Some ways to prevent this is by denying the
+            default with exceptions to public resources and for unique application business requirements to be met by
+            enforced domain models.</p>
         <h2>
             <li>Security Misconfiguration</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Security Misconfiguration is just basically what it's titled. It's the incorrect assembly of the
+            safeguards/security measures for a web application. These "misconfigurations" can occur when weak points,
+            or holes, are left in the security infrastructure of a web app by it's system admins/developers. If left
+            unfixed, these misconfigurations can lead an attacker straight into the system and can result in it being
+            compromised. A compromised system can lead to data theft or deletion. Some preventive measures that can be
+            taken to ensure this doesn't happen are to develop a strong framework for security and make sure there are
+            no holes in it. Keeping software up to date is also crucial to prevent these issues.</p>
         <h2>
-            <li>Cross-Site Scripting (XSS)</li>
+            <li>Cross-Site Scripting</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Cross-Site Scripting, or XSS, attacks are a form of injection. The attacks happen when malicious
+            content/scripts are injected into websites that are rather harmless and trustworthy. XSS attacks can occur
+            when an attacker employs a web app to send malicious code, which is usually in the form of a browser side
+            script, to another user. One reason why these attacks happen is because when some websites use input from a
+            user, the output they generate isn't validating or encoding it. An XSS attack can compromise user accounts,
+            ativate trojan horse programs, and modify page info/content. A way to prevent these attacks is to employ a
+            Web Application Firewall, or WAF. WAFs employ many different methods to counter these attacks but they are
+            generally conisdered to be the best way to stop the attacks.</p>
         <h2>
             <li>Insecure Deserialization</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Insecure Deserialization is a vulnerability which can occur when untrusted or suspicious data is used for
+            things such as committing Denial of Service attacks or abusing the sense or logic of an application.
+            Insecure Deserialization allows attackers to relocate a "shipment" of serialized objects. Objects
+            essentially contain information and serialization is the process of taking said objects and converting them
+            into something else such as plaintext. Insecure Deserialization happens can happen when an admin or
+            developer fails to impliment integrity checks. The only surefire ans safe way to prevent ID is by just
+            simply not accepting serialized objects that come from untrusted sources.</p>
         <h2>
             <li>Using Components with Known Vulnerabilities</li>
         </h2>
-        <p>Injections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Components with known vulnerabilites are just basically what they're titled. They're components that can be
+            exploited with certain tools and whatnot. This can lead to a breach within the web app and the
+            exposure/theft of data and more. Any web application can fall prey to these attacks because nowadays, more
+            and more developers are starting to use open source components instead of coding their own from scratch.
+            One way to prevent a web application being breached is just to quite simply, have the developers create
+            their own componenets and to constantly update them. But if the developer should need to use an open source
+            componenet, they should be sure to review the componenet thoroughly and fix any weakpoints that can be
+            breached, and also maintaining those componenets updated as well.</p>
         <h2>
-            <li>Insufficient Logging & Monitoring</li>
+            <li>Insufficient Logging and Monitoring</li>
         </h2>
-        <p>IInjections are when untrusted data is tranfered to a code interpreter and placed in a web application.
-            Injections occur when code is not validated or filtered. When they occur, hostile data corrupts the
-            application and records sensitive data and records. Some ways to prevent Injections are to keep data
-            seperate from commands and questions and/or to use a safe API. Being oblivious to them can result in data
-            loss, corruption, & disclusure to unauthorized parties.</p>
+        <p>Insufficient Logging and Monitoring was said by OWASP to be "the bedrock of nearly every major incident."
+            they also stated that "Attackers rely on the lack of monitoring and timely response to achieve their goals
+            without being detected". Rather than actually being a vulnerability itself, Insufficient Logging and
+            Monitoring is basically the lack of doing what is considered "best practice" in the web application
+            industry. Doing so, it can lead to disasterous effects such as security breaches which themselves can be
+            detrimental to a business's or individual's reputation and the user themself. Not only that, when their is
+            a lack of logging and monitoring, breachs tend to go on longer because the admins or developers are failing
+            to notice what is going on. One way to avoid the effects that Insufficient Logging and Monitoring can have
+            is to ensure that all failures such as login,access control, and server-side input validation can be logged
+            efficiently so as to identify suspicious/malicious accounts.</p>
     </ol>
 </body>
-
 </html>
